create the user interface in popup

--- a/popup.html
+++ b/popup.html
@@ -22,15 +22,28 @@
   <body>
     <h2>Emojini :)</h2>
     <table>
-        
+        <tr>
+            <td>
+                <h4>Starting Key Binding</h4>
+            </td>
+            <td>
+                <input type="text"> 
+            </td>
+        </tr>
     </table>
-    <input type="color" id="color-changer" />
-    <h2>Rotate Page</h2>
-    <input type="range" min="0" max="360" step="1" value="0" id="rotate" />
-
-    <h2>Rotate 3D</h2>
-    <input type="range" min="0" max="360" step="1" value="0" id="rotate3d" />
-
+    <h4>Emojis Key Bindings:</h4>
+    <table>
+        <tr>
+            <td>
+                glg
+            </td>
+            <td>
+                pppp
+            </td>
+        </tr>
+    </table>
+    <button>Add New</button>
+    <button>Apply</button>
     <script src="popup.js"></script>
   </body>
 </html>
