start on content script

--- a/popup.html
+++ b/popup.html
@@ -43,7 +43,7 @@
         </tr>
     </table>
     <button>Add New</button>
-    <button>Apply</button>
+    <button id="appl">Apply</button>
     <script src="popup.js"></script>
   </body>
 </html>
