--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,9 @@
         color: #E352D3;
         
       }
+      #appl{
+        background-color: #E352D3;
+      }
     </style>
 
   </head>
@@ -45,7 +48,7 @@
                 <h4>Starting Caracter:</h4>
             </td>
             <td>
-                <input id="general" type="text"> 
+                <input size="30px" id="general" placeholder="a caracter/s of your choice eg: ~, &" type="text"> 
             </td>
         </tr>
     </table>
@@ -61,8 +64,11 @@
             </th>
         </tr>
     </table>
+    <div style="margin-top: 40px;">
     <button id="add_new">Add New</button>
     <button id="appl">Apply</button>
+    <a id="hiw" href="howitworks.html">How it Works?</a>
+    </div>
     </fieldset>
     <h6>created by Ahmed Debbech v0.1</h6>
 
